Lightning components to render response from callout properly.

--- a/force-app/main/default/lwc/dataLoadSwitch/dataLoadSwitch.html
+++ b/force-app/main/default/lwc/dataLoadSwitch/dataLoadSwitch.html
@@ -13,7 +13,9 @@
             <lightning-card>
                 <div class="slds-m-around_small">
                     <!-- Main -->
-                    {currentContent}
+                    <template if:true={showValidationRules}>
+                        <c-dataload-switch-validation-rules></c-dataload-switch-validation-rules>
+                    </template>
                 </div>
             </lightning-card>
         </lightning-layout-item>
