--- a/force-app/main/default/lwc/dataloadSwitchValidationRules/dataloadSwitchValidationRules.html
+++ b/force-app/main/default/lwc/dataloadSwitchValidationRules/dataloadSwitchValidationRules.html
@@ -1,10 +1,11 @@
 <template>
-
-    <ul class="slds-m-around_medium">
-        <template for:each={records} for:item="validationRule">
-            <li key={validationRule.id}>
-                Name: {validationRule.validationName} -- Active: {validationRule.active}
-            </li>
-        </template>
-    </ul>
+    <div class="slds-p-around_x-small">
+        <c-dataload-switch-validation-rules-table
+            key-field="id"
+            data={records}
+            columns={columns}
+            hide-checkbox-column
+            onselectedrec={handleSelectedRec}
+        ></c-dataload-switch-validation-rules-table>
+    </div>
 </template>
