--- a/force-app/main/default/lwc/toogleValidationRule/toogleValidationRule.html
+++ b/force-app/main/default/lwc/toogleValidationRule/toogleValidationRule.html
@@ -5,11 +5,11 @@
             type="toggle" 
             label="Basic option"
             variant="label-hidden" 
-            message-toggle-active="Selected"
-            message-toggle-inactive={getInactiveMsg}
+            message-toggle-active="On"
+            message-toggle-inactive="Off"
             checked={checked}
-            disabled={buttonDisabled}
             onchange={handleToggle}>
         </lightning-input>
+        <!--disabled={buttonDisabled}-->
     </div>
 </template>
