--- a/force-app/main/default/lwc/dataloadSwitchValidationRules/dataloadSwitchValidationRules.html
+++ b/force-app/main/default/lwc/dataloadSwitchValidationRules/dataloadSwitchValidationRules.html
@@ -1,11 +1,13 @@
 <template>
-    <div class="slds-p-around_x-small">
-        <c-dataload-switch-validation-rules-table
-            key-field="id"
-            data={records}
-            columns={columns}
-            hide-checkbox-column
-            onselectedrec={handleSelectedRec}
-        ></c-dataload-switch-validation-rules-table>
-    </div>
+    <lightning-card>
+        <div class="slds-m-around_small">
+            <c-dataload-switch-validation-rules-table
+                key-field="id"
+                data={records}
+                columns={columns}
+                hide-checkbox-column
+                onselectedrec={handleSelectedRec}
+            ></c-dataload-switch-validation-rules-table>
+        </div>
+    </lightning-card>
 </template>
